fixes for search title and icon on mobile

--- a/src/components/LocationAutocompleteInput/LocationAutocompleteInput.css
+++ b/src/components/LocationAutocompleteInput/LocationAutocompleteInput.css
@@ -21,7 +21,7 @@
 }
 
 .iconSvg {
-  margin: auto;
+  margin: 11px auto 17px;
 }
 
 .iconSvgGroup {
